# bs-os-llm-context

./: .gitignore
.trae/documents/: Analysis of blueshift-brokers Framework.md
blueshift_context/: 00_Master_Instructions.md  01_Architecture_and_Flow.md  02_Configuration_Schemas.md  03_Type_Definitions.md  04_Template.py  05_Streaming_Patterns.md  06_Reference_Implementation.py  06_Reference_Implementation_Alpaca.py  07_Broker_Integration_Contract.md  08_Master_Data_and_Streaming_Converters.md  09_Context_Variables_Reference.md  10_Advanced_Patterns.md  doc_fetch.md
contribs/brokers/alpaca/: pyproject.toml
contribs/brokers/alpaca/src/blueshift/contribs/brokers/alpaca/: __init__.py  alpaca.py
contribs/brokers/fivep/: pyproject.toml
contribs/brokers/fivep/src/blueshift/contribs/brokers/fivep/: __init__.py  fivep.py
contribs/brokers/isec/: README.md  pyproject.toml
contribs/brokers/isec/src/blueshift/contribs/brokers/isec/: __init__.py  isec.py
contribs/brokers/kite/: pyproject.toml
contribs/brokers/kite/src/blueshift/contribs/brokers/kite/: __init__.py  kite.py
contribs/brokers/upstox/: pyproject.toml
contribs/brokers/upstox/src/blueshift/contribs/brokers/upstox/: __init__.py  upstox.py
